--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,17 +4,18 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        {
-            "type": "node",
-            "request": "attach",
-            "name": "Attach by Process ID",
-            "processId": "${command:PickProcess}"
-        },
-        {
-            "type": "node",
-            "request": "launch",
-            "name": "Launch Program",
-            "program": "${workspaceFolder}/backend\\routes\\haRouter.js"
-        }
+		/*/{
+			"type": "node",
+			"request": "attach",
+			"name": "Attach to backend by Process ID",
+			"processId": "${command:PickProcess}"
+		}, **/
+		{
+			"type": "chrome",
+			"request": "launch",
+			"name": "Launch Chrome against localhost",
+			"url": "http://localhost:3000",
+			"webRoot": "${workspaceFolder}/frontend/src"
+		}
     ]
 }
