--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "mongoose": "^5.3.13",
+    "node-fetch": "^2.3.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0"
   },
