--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
-    "nodeja",
+    "nodejs",
     "express",
     "body-parser"
   ],
@@ -23,7 +23,8 @@
     "mongoose": "^5.3.13",
     "node-fetch": "^2.3.0",
     "passport": "^0.4.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "request": "^2.88.0"
   },
   "devDependencies": {}
 }
